# livraria

./: .gitignore  db.sqlite3  pyproject.toml  requirements.txt
core/: models.py  serializers.py  views.py
core/migrations/: 0001_initial.py  0002_editora.py  0003_autor_livro.py  0004_livro_autores.py
livraria/: settings.py  urls.py
